# src/docs/swagger-generated.json
@@ -7,6 +7,7 @@
   },
   "servers": [
     {
+      "url": "http://localhost:5000",
       "description": ""
     }
   ],
@@ -861,6 +862,16 @@
             }
           }
         ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api/test/topics": {
+      "get": {
+        "description": "",
         "responses": {
           "default": {
             "description": ""
